# mcp-scanner

./: .env.example  .gitignore  README.md  docker-compose.yml  start.sh
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/src/mcp_scanner/: config.py  database.py  init_db.py  main.py
backend/src/mcp_scanner/api/: auth.py  report_routes.py  routes.py  schemas.py
backend/src/mcp_scanner/checkers/: __init__.py  base.py  compliance.py  data_exfiltration.py  infra_security.py  injection.py  normalizer.py  patterns.py  rug_pull.py  supply_chain.py  tool_poisoning.py  (+1 more)
backend/tests/: test_integration.py  test_integration_pipeline.py  test_intelligent_detection.py  test_models.py  test_sbom_model.py
backend/tests/api/: test_dismiss.py  test_history.py  test_routes.py  test_routes_db.py  test_sbom_api.py  test_sbom_export.py  test_triage.py
backend/tests/checkers/: test_base.py  test_compliance.py  test_data_exfiltration.py  test_deduplication.py  test_infra_code_graph.py  test_infra_security.py  test_injection.py  test_normalizer.py  test_patterns.py  test_registry.py  test_rug_pull.py  test_supply_chain.py  test_tool_poisoning.py
backend/tests/fixtures/: malicious_mcp.json
backend/tests/services/: test_capability_analyzer.py  test_code_graph.py  test_code_graph_chat.py  test_deps_dev_client.py  test_hf_classifier.py  test_llm_judge.py  test_manifest_parsers.py  test_orchestrator.py  test_orchestrator_db.py  test_orchestrator_tiers.py  test_osv_client.py  test_repo_analyzer.py  test_sbom_generator.py  test_specialized_judge.py  test_yara_scanner.py
(+53 files in other folders)
